tests/modules-corpus/corpus/reject/sharing_type_mismatch.pdx
// Issue #247: elaborator — sharing constraint checker
// AC test: type mismatch in sharing constraint

structure {
  module M = structure {
    type t = int
  }
  module N = structure {
    type t = string
  }
}
